# task-graph-editor

./: .gitlab-ci.yml  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: build.yml
scripts/: build-release.sh  deploy-remote.sh
src/: app.rs  main.rs  model.rs  ssh.rs  worker.rs
