[package]
name = "task-graph-editor"
version = "0.4.1"
edition = "2024"

[dependencies]
eframe = "0.33.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9"
thiserror = "2"
mimalloc = { version = "0.1", default-features = false }
rfd = "0.17.2"
chrono = "0.4"

# vendored OpenSSL（ssh2 依赖链需要，全平台免安装）
[dependencies.openssl]
version = "0.10"
features = ["vendored"]

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
